--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </section>
       </div>
       <section class="footerContenedor2">
-        <img src="./img/DG_Pastelería.svg" alt="logo" class="footerLogo">
+        <img src="./img/DG_Pasteleria.svg" alt="logo" class="footerLogo">
         <p class="my-2 fs-5 fw-bold">Recibí novedades</p>
         <div class="input-group mb-3">
           <input type="text" class="form-control" placeholder="Email" aria-label="Recipient's mail" aria-describedby="button-addon2">
