correccion vinculacion con error404.html

--- a/html/productos.html
+++ b/html/productos.html
@@ -327,7 +327,7 @@
 			<p class="my-2 fs-5 fw-bold">Recibí novedades</p>
 			<div class="input-group mb-3">
 				<input type="text" class="form-control" placeholder="Email" aria-label="Recipient's mail" aria-describedby="button-addon2">
-				<a href="./ERROR404.html" class="btn btn-outline-secondary" role="button" id="button-addon2">Enviar</a>
+				<a href="./error404.html" class="btn btn-outline-secondary" role="button" id="button-addon2">Enviar</a>
 			</div>
 		</section>
 	</div>
